--- a/jpashop/src/main/resources/templates/hello.html
+++ b/jpashop/src/main/resources/templates/hello.html
@@ -3,6 +3,6 @@
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> </head>
 <body>
-<p th:text="'안녕하세요. ' + ${data}" >안녕하세요. 손님</p>
+<p th:text="'안녕하세요. ' + ${data} + '하이'" >안녕하세요. 손님</p>
 </body>
 </html>
